--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -33,7 +33,7 @@
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person3.jpeg" alt="Card image">
         <div class="card-body">
           <p class="title">Saptarsi Debnath</p>
           <p>FOUNDER & CEO</p>
@@ -43,7 +43,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person2.jpeg" alt="Card image">
         <div class="card-body">
           <p class="title">Chris Mathew</p>
           <p>Co-founder & Relationship Manager</p>
@@ -53,7 +53,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person1.jpeg" alt="Card image">
         <div class="card-body">
           <p class="title">Hitesh Chaudhury</p>
           <p>CTO</p>
